Replace leading typed text when completing function implementation

Summary:
When executing function-implementation auto-completion, this will now
replace and leading typed text that matches the proposed completion
instead of duplicating it.

BUG: 384710

Test Plan:
```
int Foo(int thing);
struct Bar
{
  void Method(int thing);
}
```
Start typing `int Foo` or `Bar::Meth` and then execute the offered completion.

Reviewers: #kdevelop, mwolff

Reviewed By: #kdevelop, mwolff

Subscribers: kfunk, brauch, mwolff, apol, kdevelop-devel

Tags: #kdevelop

Differential Revision: https://phabricator.kde.org/D16326